--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>Wichita Blubber's</title>
+    <title>Wichita Blubbers</title>
   </head>
   <body>
     <script src="index.js"></script>
     <div id="container">
-      <h1>Wichita Blubber's</h1>
+      <h1>Wichita Blubbers</h1>
       <p id="prices">Adults: $13 / Child and Seniors: $8</p>
       <p>
         Adults:<select id="adult-quantity" style="width: 80px">
