--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Hello! If you have found me, I want to let you in on a secret. My total for tickets had the sales tax for Kansas in the total. Thank you -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
